--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap');
 
+/* shared styles */
 * {
     font-family: "Azeret Mono";
 }
 
-nav{
+.description {
+    color: #0D1321;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+/* nav styles starts here */
+nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -24,4 +33,39 @@ nav button {
     color: #0D1321;
     font-size: 20px;
     font-weight: 600;
+}
+
+/* header styles */
+#header-bg {
+    background: url('../assets/Hero-bg.png') no-repeat center center;
+    background-size: cover;
+    height: 662px;
+    margin-bottom: 50px;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    width: 63rem;
+    margin: auto;
+    padding: 30px;
+    align-items: center;
+    justify-content: center;
+}
+
+header h1 {
+    color: #0D1321;
+    text-align: center;
+    font-size: 48px;
+    font-weight: 800;
+}
+
+header button {
+    padding: 21px 24px;
+    border-radius: 8px;
+    background: #0D1321;
+    color: #FFF;
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 1.7rem;
 }
