--- a/styles/styles.css
+++ b/styles/styles.css
@@ -69,3 +69,28 @@ header button {
     font-weight: 600;
     margin-top: 1.7rem;
 }
+
+/* main section */
+.whyWebDev-section {
+    border-radius: 16px;
+    background: rgba(13, 19, 33, 0.02);
+    width: 1140px;
+    padding: 80px 97px;
+    margin: auto;
+}
+
+#whyWebDev-div {
+    display: flex;
+    width: 852px;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+    border-radius: 16px;
+}
+
+.section-title {
+    color: #0D1321;
+    text-align: center;
+    font-size: 32px;
+    font-weight: 800;
+}
