--- a/styles/styles.css
+++ b/styles/styles.css
@@ -84,7 +84,7 @@ header button {
     width: 852px;
     flex-direction: column;
     align-items: center;
-    margin: auto;
+    margin: 30px auto;
     border-radius: 16px;
 }
 
@@ -93,4 +93,39 @@ header button {
     text-align: center;
     font-size: 32px;
     font-weight: 800;
+}
+
+.article-title {
+    color: rgba(13, 19, 33, 0.70);
+    font-size: 24px;
+    font-weight: 700;
+    width: 390px;
+    line-height: 36px;
+}
+
+.article-description {
+    color: #0D1321;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+.card-btn {
+    padding: 12px 20px;
+    border: 1px solid #0D1321;
+    opacity: 0.7;
+    color: #0D1321;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.webDev-article {
+    display: flex;
+    padding: 48px;
+    align-items: flex-start;
+    gap: 32px;
+    align-self: stretch;
+    border-radius: 16px;
+    background: linear-gradient(90deg, #FFF 0%, rgba(255, 255, 255, 0.00) 100%);
 }
