--- a/styles/styles.css
+++ b/styles/styles.css
@@ -76,7 +76,7 @@ header button {
     background: rgba(13, 19, 33, 0.02);
     width: 1140px;
     padding: 80px 97px;
-    margin: auto;
+    margin: 100px auto;
 }
 
 #whyWebDev-div {
@@ -99,7 +99,7 @@ header button {
     color: rgba(13, 19, 33, 0.70);
     font-size: 24px;
     font-weight: 700;
-    width: 390px;
+    width: 420px;
     line-height: 36px;
 }
 
@@ -127,5 +127,10 @@ header button {
     gap: 32px;
     align-self: stretch;
     border-radius: 16px;
+    margin: 30px 0;
     background: linear-gradient(90deg, #FFF 0%, rgba(255, 255, 255, 0.00) 100%);
+}
+#webDev-article-2{
+    flex-direction: row-reverse;
+    background: linear-gradient(-90deg, #FFF 0%, rgba(255, 255, 255, 0.00) 100%);
 }
