--- a/styles/styles.css
+++ b/styles/styles.css
@@ -130,7 +130,25 @@ header button {
     margin: 30px 0;
     background: linear-gradient(90deg, #FFF 0%, rgba(255, 255, 255, 0.00) 100%);
 }
-#webDev-article-2{
+
+#webDev-article-2 {
     flex-direction: row-reverse;
     background: linear-gradient(-90deg, #FFF 0%, rgba(255, 255, 255, 0.00) 100%);
+}
+
+/* inspiration section */
+#inpiration-section {
+    display: flex;
+    width: 1140px;
+    flex-direction: column;
+    align-items: center;
+    gap: 48px;
+    margin: 100px auto;
+    text-align: center;
+}
+
+#inspiration-clip {
+    border-radius: 16px;
+    border: 1px solid rgba(13, 19, 33, 0.20);
+    padding: 30px;
 }
