--- a/styles/styles.css
+++ b/styles/styles.css
@@ -152,3 +152,54 @@ header button {
     border: 1px solid rgba(13, 19, 33, 0.20);
     padding: 30px;
 }
+
+/* Current Target */
+.target-section {
+    display: flex;
+    width: 1140px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 40px;
+    margin: auto;
+}
+
+.current-target-card {
+    display: flex;
+    width: 364px;
+    padding: 40px;
+    flex-direction: column;
+    align-items: flex-start;
+    border-radius: 16px;
+}
+
+.card-title {
+    color: #0D1321;
+    font-size: 24px;
+    font-weight: 800;
+}
+
+.card-description {
+    color: #0D1321;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    opacity: 0.7;
+}
+
+.current-card-container {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+    align-self: stretch;
+}
+
+#current-card3-bg {
+    background: rgba(255, 223, 0, 0.05);
+}
+
+#current-card2-bg {
+    background: rgba(0, 76, 232, 0.05);
+}
+#current-card1-bg {
+    background: rgba(255, 76, 30, 0.05);
+}
