--- a/styles/styles.css
+++ b/styles/styles.css
@@ -150,17 +150,17 @@ header button {
 #inspiration-clip {
     border-radius: 16px;
     border: 1px solid rgba(13, 19, 33, 0.20);
-    padding: 30px;
+    padding: 33px;
 }
 
 /* Current Target */
 .target-section {
     display: flex;
-    width: 1140px;
+    width: 1335px;
     flex-direction: column;
     align-items: flex-start;
     gap: 40px;
-    margin: auto;
+    margin: 100px auto;
 }
 
 .current-target-card {
@@ -186,6 +186,13 @@ header button {
     opacity: 0.7;
 }
 
+.card-ancor {
+    color: #0D1321;
+    font-size: 16px;
+    font-weight: 700;
+    text-decoration-line: underline;
+}
+
 .current-card-container {
     display: flex;
     align-items: center;
@@ -200,6 +207,18 @@ header button {
 #current-card2-bg {
     background: rgba(0, 76, 232, 0.05);
 }
+
 #current-card1-bg {
     background: rgba(255, 76, 30, 0.05);
+}
+
+.next-target-card {
+    display: flex;
+    padding: 40px;
+    align-items: center;
+    gap: 32px;
+    flex: 1 0 0;
+    border-radius: 16px;
+    border: 1px solid rgba(13, 19, 33, 0.15);
+    background: #FFF;
 }
