--- a/styles/styles.css
+++ b/styles/styles.css
@@ -255,7 +255,7 @@ header button {
     width: 606px;
 }
 
-#contact-inp-container{
+#contact-inp-container {
     display: flex;
     gap: 15px;
 }
@@ -277,4 +277,21 @@ header button {
     padding: 17px 20px;
     border-radius: 8px;
     background: #FFF;
+}
+
+/* footer section  */
+footer {
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    background: rgba(13, 19, 33, 0.03);
+    gap: 24px;
+    padding: 20px 245px;
+    border-radius: 16px;
+}
+
+footer h4 {
+    color: #0D1321;
+    font-size: 20px;
+    font-weight: 600;
 }
