--- a/styles/styles.css
+++ b/styles/styles.css
@@ -69,6 +69,10 @@ header button {
     font-weight: 600;
     margin-top: 1.7rem;
 }
+#btn-anchor{
+    text-decoration: none;
+    color: #FFF;
+}
 
 /* main section */
 .whyWebDev-section {
